--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.abs</groupId>
-	<artifactId>absPrac1</artifactId>
+	<artifactId>samplePrac1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>absPrac1</name>
+	<name>samplePrac1</name>
 	<description>Stockes</description>
 	<url/>
 	<licenses>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
