--- a/manifest1.yml
+++ b/manifest1.yml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: myfirstdeployment
+ name: mavenwebappdeployment
 spec:
  replicas: 2
  strategy: 
@@ -14,13 +14,14 @@ spec:
   metadata:
    name: mavenwebapppod
    labels:
-     app: mavenwebapp	 
+     app: mavenwebapp  
   spec: 
     containers:
     - name: mavenwebappcontainer
-      image: amzad24/prac
+      image: amzad24/prac1
+      imagePullPolicy: Always
       ports:
-      - containerPort: 9000
+      - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
@@ -32,5 +33,5 @@ spec:
    app: mavenwebapp
   ports:
    - port: 80
-     targetPort: 9000
+     targetPort: 8080
 ...
