--- a/manifest1.yml
+++ b/manifest1.yml
@@ -18,7 +18,7 @@ spec:
   spec: 
     containers:
     - name: mavenwebappcontainer
-      image: amzad24/prac2
+      image: amzad24/prac2:latest
       imagePullPolicy: Always
       ports:
       - containerPort: 8080
