--- a/manifest1.yml
+++ b/manifest1.yml
@@ -18,8 +18,7 @@ spec:
   spec: 
     containers:
     - name: mavenwebappcontainer
-      image: amzad24/prac2:latest
-      imagePullPolicy: Always
+      image: amzad24/prac2
       ports:
       - containerPort: 8080
 ---
